* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 3.9.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 3.8.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Sep 06 2023 Steven Pritchard <steve@sicura.us> - 3.7.0
- Add AlmaLinux 8 support
- Move `$init_command` in `libreswan::nss::init_db` to a parameter and set
  the default in Hiera to avoid the hard-coded list of supported operating
  systems
- Clean up for puppet-lint in `libreswan::nss::init_db`
- Add support for Puppet 8 and stdlib 9
- Drop support for Puppet 6
- Update gem dependencies
- Clean up Gemfile for rubocop

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.6.0
- Add RockyLinux 8 support

* Tue Jun 22 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.5.0
- Removed obsolete configuration options whose presence prevent the
  ipsec service from starting on EL8. The corresponding deprecated
  parameters are as follows:
  - `libreswan::ikeport`
  - `libreswan::nat_ikeport`
  - `libreswan::klipsdebug`
  - `libreswan::perpeerlog`
  - `libreswan::perpeerlogdir`

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jan 07 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.4.2
- Removed EL6 support

* Tue Nov 03 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.4.1-0
- Updated/corrected documentation
- Added REFERENCE.md
- Removed the unused libreswan::use_certs parameter
- Converted libreswan::params to module data
- Hooked service notifications at the class levels

* Thu Oct 08 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 3.4.0-0
- Add support for IKEv2 Mobility (RFC-4555) and mobile client connections
- Add additional settings for DNS and Domains for libreswan v3.23+
